v0.10.2/_sources/generated/statsmodels.discrete.count_model.ZeroInflatedPoisson.rst.txt
statsmodels.discrete.count\_model.ZeroInflatedPoisson
=====================================================

.. currentmodule:: statsmodels.discrete.count_model

.. autoclass:: ZeroInflatedPoisson

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         ZeroInflatedPoisson.cdf
         ZeroInflatedPoisson.cov_params_func_l1
         ZeroInflatedPoisson.fit
         ZeroInflatedPoisson.fit_regularized
         ZeroInflatedPoisson.from_formula
         ZeroInflatedPoisson.hessian
         ZeroInflatedPoisson.information
         ZeroInflatedPoisson.initialize
         ZeroInflatedPoisson.loglike
         ZeroInflatedPoisson.loglikeobs
         ZeroInflatedPoisson.pdf
         ZeroInflatedPoisson.predict
         ZeroInflatedPoisson.score
         ZeroInflatedPoisson.score_obs



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         ZeroInflatedPoisson.endog_names
         ZeroInflatedPoisson.exog_names

