v0.15.0/_sources/generated/statsmodels.discrete.count_model.ZeroInflatedPoisson.rst.txt
statsmodels.discrete.count\_model.ZeroInflatedPoisson
=====================================================

.. currentmodule:: statsmodels.discrete.count_model

.. autoclass:: ZeroInflatedPoisson
   :exclude-members: cdf,cov_params_func_l1,fit,fit_regularized,from_formula,get_distribution,hessian,information,initialize,loglike,loglikeobs,pdf,predict,score,score_obs,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~ZeroInflatedPoisson.cdf
      ~ZeroInflatedPoisson.cov_params_func_l1
      ~ZeroInflatedPoisson.fit
      ~ZeroInflatedPoisson.fit_regularized
      ~ZeroInflatedPoisson.from_formula
      ~ZeroInflatedPoisson.get_distribution
      ~ZeroInflatedPoisson.hessian
      ~ZeroInflatedPoisson.information
      ~ZeroInflatedPoisson.initialize
      ~ZeroInflatedPoisson.loglike
      ~ZeroInflatedPoisson.loglikeobs
      ~ZeroInflatedPoisson.pdf
      ~ZeroInflatedPoisson.predict
      ~ZeroInflatedPoisson.score
      ~ZeroInflatedPoisson.score_obs
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~ZeroInflatedPoisson.endog_names
      ~ZeroInflatedPoisson.exog_names
   
   
   